--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
+html {
+  font-size: 13px !important;
+}
+
 body {
   margin: 0;
-  font-family: AJannatLT !important; 
+  font-family: AJannatLT !important;
 }
 
 * {
-  font-family: AJannatLT !important; 
+  font-family: AJannatLT !important;
 }
 
 a {
